# OpenVOE

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  engine.cc  engine.cpp  package.json
pipewire/: CMakeLists.txt  device_change.cpp  device_change.h  list_devices.cpp  list_devices.h
